--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+cycler==0.10.0
 Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+matplotlib==1.5.1
 numpy==1.10.4
 pandas==0.17.1
+pyparsing==2.1.0
 python-dateutil==2.5.0
 pytz==2015.7
+scikit-learn==0.17.1
+scipy==0.17.0
 six==1.10.0
+sklearn==0.0
 Werkzeug==0.11.4
 wheel==0.24.0
